opam-version: "1.2"
name: "angstrom-async"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/angstrom"
bug-reports: "https://github.com/inhabitedtype/angstrom/issues"
dev-repo: "https://github.com/inhabitedtype/angstrom.git"
build: [
  ["jbuilder" "build" "--only-packages" "angstrom-async" "--root" "."
   "-j" jobs "@install"]
]
depends: [
  "angstrom"
  "async"
]
available: [ ocaml-version >= "4.01.0" ]