opam-version: "1.2"
name: "angstrom-lwt-unix"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/angstrom"
bug-reports: "https://github.com/inhabitedtype/angstrom/issues"
dev-repo: "https://github.com/inhabitedtype/angstrom.git"
build: [
  ["jbuilder" "build" "--only-packages" "angstrom-lwt-unix" "--root" "."
   "-j" jobs "@install"]
]
depends: [
  "angstrom"
  "lwt"
  "base-unix"
]
available: [ ocaml-version >= "4.01.0" ]