opam-version: "1.2"
name: "angstrom"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/angstrom"
bug-reports: "https://github.com/inhabitedtype/angstrom/issues"
dev-repo: "https://github.com/inhabitedtype/angstrom.git"
build: [
  ["jbuilder" "build" "--only-packages" "angstrom" "--root" "."
   "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build}
  "alcotest" {test & >= "0.4.1"}
  "cstruct" {>= "0.7.0"}
  "ocplib-endian" {>= "0.6"}
  "result"
]
available: [ ocaml-version >= "4.01.0" ]
