opam-version: "1.2"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [ "Spiros Eliopoulos <spiros@inhabitedtype.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/angstrom"
bug-reports: "https://github.com/inhabitedtype/angstrom/issues"
dev-repo: "https://github.com/inhabitedtype/angstrom.git"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "alcotest" {test & >= "0.6.0" & < "0.8.0"}
  "cstruct" {>= "0.7.0"}
  "ocplib-endian" {>= "0.6"}
  "result"
]
available: [ ocaml-version >= "4.03.0" ]
