(library
 (name angstrom_test)
 (libraries angstrom)
 (flags :standard -safe-string)
 (modules test_let_syntax_native test_let_syntax_ppx)
 (preprocess
  (per_module
   (future_syntax test_let_syntax_native)
   ((pps ppx_let)
    test_let_syntax_ppx))))

(test
 (name test_angstrom)
 (libraries alcotest angstrom angstrom_test)
 (modules test_angstrom)
 (package angstrom))

(executables
 (libraries bigstringaf angstrom RFC7159)
 (modules test_json)
 (names test_json))
